feat: Added movement service with validations & types for credit & debit with update the balance for the account and control of exceptions
